<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5FA"
    tools:context=".presentation.fragments.MenuFragment"
    tools:ignore="ContentDescription,RelativeOverlap">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/user_name"
        android:textColor="#4447E2"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/userProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="49dp"
        android:src="@drawable/ic_frame_user" />

    <TextView
        android:id="@+id/sayHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginStart="49dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/hi_ho"
        android:textColor="#4447E2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:layout_below="@id/sayHello"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/menu_rectangle">

        <LinearLayout
            android:id="@+id/newOrdersContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_rectangle_menu"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/new_orders"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/priceContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_rectangle_menu"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dollar_circle"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/payment"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/arxivContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_rectangle_menu"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_archive"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/arhiv"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reportsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_rectangle_menu"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_graph"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/graph"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loadProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="#2F49D1"
        android:visibility="gone" />
</RelativeLayout>